--- a/home.html
+++ b/home.html
@@ -19,9 +19,9 @@
             <div class="header__box__first">
                 <img src="images/logo.png" alt="">
                 <div class="header__menu">
-                    <div class="header__menu__item">home</div>
-                    <div class="header__menu__item">information</div>
-                    <div class="header__menu__item">coutries</div>
+                    <a href="home.html" class="header__menu__item">home</a>
+                    <a href="info.html" class="header__menu__item">information</a>
+                    <a href="countries.html" class="header__menu__item">countries</a>
                 </div>
             </div>
             <div class="header__box_second">
