--- a/countries.html
+++ b/countries.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/countries_style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/swipers.css">
     <title>Travek</title>
 </head>
 
@@ -33,38 +34,58 @@
         <div class="main_hbox">
             <div class="main__hbox__title">Countries</div>
         </div>
-        <div class="main__form__box">
+        <div class="main__form__box" id="main__form__box">
             <div class="county_view">1. Russia<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewRU_cnt()">
             </div>
             <div class="county_view">2. Japan<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewJP_cnt()">
             </div>
             <div class="county_view">3. China<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewCH_cnt()">
             </div>
             <div class="county_view">4. Canada<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewCA_cnt()">
             </div>
             <div class="county_view">5. USA<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewUSA_cnt()">
             </div>
             <div class="county_view">6. Australia<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewAV_cnt()">
             </div>
             <div class="county_view">7. Greece<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewGR_cnt()">
             </div>
             <div class="county_view">8. Georgia<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewGO_cnt()">
             </div>
             <div class="county_view">9. Denmark<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewDM_cnt()">
             </div>
             <div class="county_view">10. Abkhazia<br>
-                <input type="button" value="view">
+                <input type="button" value="view" onclick="viewAB_cnt()">
             </div>
             <div class="soon">Coming soon</div>
+        </div>
+        <div class="desc_box" id="desc_box">
+            <div class="top_box">
+                <div class="lastback" onclick="lastback_cnt()">← back</div>
+                <div class="link_box">
+                    <a href="#" class="info_link">all info</a>
+                    <img src="images/figna.svg" alt="">
+                </div>
+            </div>
+            <div class="cnt_name" id="cnt_name_cnt"></div>
+            <div id="desc_cnt"></div>
+        </div>
+        <div class="sim-slider" id="sliderRU">
+            <ul class="sim-slider-list">
+                <li class="sim-slider-element"><img src="" alt="1" id="slideone"></li>
+                <li class="sim-slider-element"><img src="" alt="2" id="slidetwo"></li>
+            </ul>
+            <div class="sim-slider-arrow-left"></div>
+            <div class="sim-slider-arrow-right"></div>
+            <div class="sim-slider-dots"></div>
         </div>
     </main>
     <footer>
@@ -83,4 +104,7 @@
         </div>
     </footer>
 </body>
+<script src="js/View.js"></script>
+<script src="js/swiper.js"></script>
+<script>new Sim()</script>
 </html>
